# ul-fri-nlp-course-project-2025-2026-redacted

./: .gitignore  README.md  build_index.sh  container-setup.sh  container.def  container_setup.sh  requirements.txt  run_chatbot.sh
data/: acer.json  all.json  amd.json  asrock.json  biostar.json  fractal-design.json  kingston.json  msi.json  powercolor.json  sandisk.json  sapphire.json  thermalright.json  xfx.json
output/: steamdb_requirements.json  test.json
report/: report.bib  report.tex
src/: chatbot-maybe.py  json_to_text.py
src/scraper/: README.md  pyproject.toml  runall.sh
src/scraper/cpu-spec-dataset-main/: README.md  pom.xml
src/scraper/cpu-spec-dataset-main/benchmark-web-scraper/src/main/java/cpu/spec/scraper/: CpuSpecificationModel.java
src/scraper/cpu-spec-dataset-main/benchmark-web-scraper/src/main/java/cpu/spec/scraper/file/: CpuSpecificationWriter.java
src/scraper/cpu-spec-dataset-main/benchmark-web-scraper/src/main/java/cpu/spec/scraper/parser/: CpuSpecificationParser.java
src/scraper/cpu-spec-dataset-main/dataset/: benchmark-gpus.csv  cpuworld-cpus.csv
src/scraper/cpu-spec-dataset-main/gpu-benchmark-web-scraper/: pom.xml
src/scraper/cpu-spec-dataset-main/gpu-benchmark-web-scraper/src/main/java/cpu/spec/scraper/: GpuBenchmarkScraperApp.java  GpuSpecificationModel.java
src/scraper/cpu-spec-dataset-main/gpu-benchmark-web-scraper/src/main/java/cpu/spec/scraper/file/: GpuSpecificationWriter.java
src/scraper/cpu-spec-dataset-main/gpu-benchmark-web-scraper/src/main/java/cpu/spec/scraper/parser/: GpuMegaPageParser.java  GpuSpecificationParser.java
src/scraper/cpu-spec-dataset-main/intel-web-scraper/src/main/java/cpu/spec/scraper/: IntelScraperApp.java
src/scraper/cpu-spec-dataset-main/intel-web-scraper/src/main/java/cpu/spec/scraper/parser/: CpuSpecificationParser.java
src/scraper/cpu-spec-dataset-main/web-scraper-library/src/main/java/cpu/spec/scraper/factory/: ChromeDriverFactory.java
src/scraper/output/: all.json
src/scraper/scraper_hw/: README.md  cli.py  crawler.py  http.py  models.py  parsers.py  pipeline.py  vendors.py
src/scraper/scraper_lttlabs/: README.md  lttlabs_scraper.py
src/scraper/scraper_med/: cli.py  http.py  models.py  page_scraper.py  pipeline.py  xml_parser.py
src/scraper/scraper_steam/: README.md  charts.py  cli.py  store.py
src/scraper/scraper_yt/: README.md  input.txt  yt_scraper.py
src/steamdb/: README.md  pyproject.toml
text_data/: all.txt  amd.txt  asrock.txt  biostar.txt  coolermaster.txt  fractal-design.txt  gigabyte.txt  kingston.txt  lian-li.txt  maxsun.txt  msi.txt  noctua.txt  phanteks.txt  powercolor.txt  powercolour.txt  seasonic.txt  sparkle.txt  xfx.txt
(+93 files in other folders)
