[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-scraper"
version = "0.1.0"
description = "Simple, extensible hardware component scraper for vendor websites."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "typer>=0.12.0",
]

[project.scripts]
hw-scraper = "scraper_hw.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper_hw*"]
