[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-scraper"
version = "0.1.0"
description = "Hardware spec scraper for consumer PC component vendor websites."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "typer>=0.12.0",
  "playwright>=1.45.0",
  "youtube_transcript_api>=1.2.4",
  "yt_dlp>=2026.3.17"
]

[project.scripts]
hw-scraper = "scraper_hw.cli:app"
steam-scraper = "scraper_steam.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper_hw*", "scraper_steam*"]
