[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steamdb-scraper"
version = "0.1.0"
description = "Scrapes SteamDB top charts and fetches system requirements from the Steam store API."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "playwright>=1.44.0",
  "typer>=0.12.0",
]

[project.scripts]
steamdb-scraper = "steamdb_scraper.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["steamdb_scraper*"]
